# paint-yourself-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
paint_yourself_api/: main.py
paint_yourself_api/middlewares/: __init__.py  verify_authentication.py
paint_yourself_api/routes/: routes.py  styled_images.py
paint_yourself_api/schemas/: __init__.py  styled_images.py
paint_yourself_api/services/: __init__.py  image_styler_service.py  vgg_style_transfer.py
